# space_game

./: .gitignore  CMakeLists.txt  Functions.cmake  LICENSE
common/: io.hpp  maths.hpp  matrix.hpp  node.hpp  rendering.cpp  rendering.hpp  vector.hpp  vector_base.hpp
common/nodes/: camera.hpp  skybox.hpp
game/: main.cpp  node.hpp
model_viewer/: main.cpp
